# file-manager-server

./: .dockerignore  CMakeLists.txt  Dockerfile  about.txt  client.cpp  client.h  consolelogger.cpp  consolelogger.h  docker-compose.yml  fileTransfer.cpp  fileTransfer.h  filereciver.h  logger.cpp  logger.h  main.cpp  net.h  repomix-output.xml  server.cpp  server.h  server_test_suit.cpp  session.cpp  session.h  tcpHeader.h  vcpkg.json
